# notion_fastmcp

./: .gitignore  LICENSE  pyproject.toml
config/: feeds.txt
src/notion_mcp/: __init__.py  logger.py  server.py
